changed cli name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,9 +119,9 @@ IF (WITH_FUSION)
     LIST(APPEND CLI_FILES deps/picotls/lib/fusion.c)
     SET(CLI_COMPILE_FLAGS "-mavx2 -maes -mpclmul -mvaes -mvpclmulqdq -DQUICLY_HAVE_FUSION=1 ${CLI_COMPILE_FLAGS}")
 ENDIF ()
-ADD_EXECUTABLE(cli ${CLI_FILES})
-SET_TARGET_PROPERTIES(cli PROPERTIES COMPILE_FLAGS ${CLI_COMPILE_FLAGS})
-TARGET_LINK_LIBRARIES(cli ${OPENSSL_LIBRARIES} ${CMAKE_DL_LIBS} m)
+ADD_EXECUTABLE(cli_quicly ${CLI_FILES})
+SET_TARGET_PROPERTIES(cli_quicly PROPERTIES COMPILE_FLAGS ${CLI_COMPILE_FLAGS})
+TARGET_LINK_LIBRARIES(cli_quicly ${OPENSSL_LIBRARIES} ${CMAKE_DL_LIBS} m)
 
 ADD_EXECUTABLE(test.t ${PICOTLS_OPENSSL_FILES} ${UNITTEST_SOURCE_FILES})
 TARGET_LINK_LIBRARIES(test.t quicly ${OPENSSL_LIBRARIES} ${CMAKE_DL_LIBS})
